--- a/ebextensions/project_name.config
+++ b/ebextensions/project_name.config
@@ -14,7 +14,7 @@ option_settings:
     value: {{project_name}}/wsgi.py
   - namespace: aws:elasticbeanstalk:container:python:staticfiles
     option_name: /static/
-    value: static/
+    value: {{project_name}}/static/
   - option_name: DJANGO_SETTINGS_MODULE
     value: {{project_name}}.settings
   - option_name: ENVIRONMENT
